fix: fixing response dont have example value
